#####################
#   ppic app cmake  #
#####################

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME ppic_app)
SET(PROJECT_LIB_NAME ppic)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_FLAGS "--std=c++11")

SET(APP_ROOT ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${APP_ROOT})

FILE(GLOB_RECURSE SRC_FILES *.c *.cc *.cpp)
LIST(REMOVE_ITEM SRC_FILES "${PROJECT_SOURCE_DIR}/main.cpp")
MESSAGE(STATUS ${SRC_FILES})
FILE(GLOB_RECURSE HEADER_FILES *.h *.hpp)

ADD_LIBRARY(${PROJECT_LIB_NAME} SHARED ${HEADER_FILES} ${SRC_FILES})
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

SET(LIBRARIES
        ${PROJECT_LIB_NAME}
        mysqlcppconn8)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})