######################
#   ppic test cmake  #
######################

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME ppic_test)
PROJECT(${PROJECT_NAME})

SET(GCC_COVERAGE_COMPILE_FLAGS "-ggdb -coverage -fprofile-arcs -ftest-coverage")
SET(GCC_COVERAGE_LINK_FLAGS    "-coverage -lgcov")
SET(CMAKE_CXX_FLAGS  "--std=c++11 ${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")

SET(APP_ROOT ${PROJECT_SOURCE_DIR}/../app)
SET(GTEST_ROOT ${PROJECT_SOURCE_DIR}/../thirdparty/gtest)

INCLUDE_DIRECTORIES(${APP_ROOT})
INCLUDE_DIRECTORIES(${GTEST_ROOT})

FILE(GLOB_RECURSE SRC_FILES *.c *.cc *.cpp)
FILE(GLOB_RECURSE HEADER_FILES *.h *.hpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SRC_FILES})

SET(LIBRARIES
        mysqlcppconn8)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})